# pruebakaf

./: Dockerfile  app.py  docker-compose.yml  kafka_manager.py  mongo_manager.py  pyproject.toml  readme.txt  requirements.txt
